 VFSManager.getVFSByName(String name)
 VFSManager.registerVFS(String protocol, VFS vfs)
 VFSManager.error(final Component comp, final String error, final Object[] args)
 VFSManager.getFilesystems()
 VFSFile.name
 VFSFile.path
 VFSFile.symlinkPath
 VFSFile.deletePath
 VFSFile.type
 VFSFile.length
 VFSFile.hidden
 VFSFile.canRead
 VFSFile.canWrite
 ReadWriteLock

 (Matthieu Casanova)

}}}
{{{ Editing

- New edit mode option: Elastic Tabstops (Anshal Shukla + Shlomy Reinstein).

- Applied patch from Matthew Gilbert to add ability to increase/decrease line spacing in the text area. (#3023134, Dale Anson)

- Added jflex edit mode (Matthieu Casanova)

- Haxe mode update (Dion Amago # 3123602)

- Updated erlang mode and associated *.hrl to erlang language (patch #3042398 from jclopes , Matthieu Casanova)
}}}
{{{ UI
- Updated ColorWellButton to use the dialog provided by JColorChooser rather than creating its own dialog since the JColorChooser dialog is much richer. (Dale Anson)

- New View option: Floatable toolbars. (Alan Ezust)

- New TextArea Option: Choice of color ordering w/ subpixel antialiasing. (#2989209 - Alan Ezust) 

- New mode for Oracle PL/SQL 11. (#3078863 - Diogo Kollross)

- Factor Mode fix (# 3100731 - Valeri Mytinski) 

- In conjunction with the fix for tracker 3134215, added a new option to the General options pane to let the user choose whether to restore the split configuration. (Dale Anson)

}}}
{{{ Miscellaneous

- Added a new menu item "New Macro" in Macros menu (patch #2983607 from Damien Radtke, Matthieu Casanova)

- In search and replace when replacing by a beanshell snippet, it is now possible to use multiple statements instead of
 only one statement. To do that, enclose your code in braces (patch #3002207 from cy6erGn0m, Matthieu Casanova)

- Added a command line option "-nosplash" to avoid the splash screen
  (Shlomy Reinstein).
}}}
}}}

jEdit buffer local properties:
:folding=explicit:collapseFolds=2: